# pinetime_play

./: Cargo.toml  README.md  openocd.gdb  segger.gdb
src/: main.rs  port_types.rs  sensor_value_tracker.rs
